feat: Implement task editing feature

--- a/src/app/task/task-list-page/task-list-page.component.html
+++ b/src/app/task/task-list-page/task-list-page.component.html
@@ -78,7 +78,9 @@
           (addTask)="
             listState.state === 'SUCCESS' && addTask($event, listState.results)
           "
-          (editTask)="editTask($event)"
+          (editTask)="
+            listState.state === 'SUCCESS' && editTask($event, listState.results)
+          "
         ></app-modal>
       </div>
 
