--- a/src/app/project/ui/project-card/project-card.component.html
+++ b/src/app/project/ui/project-card/project-card.component.html
@@ -2,8 +2,8 @@
   class="p-4 relative bg-gray-800 border border-gray-800 shadow-lg rounded-2xl"
 >
   <div class="text-sm text-gray-500 font-medium leading-8 mt-5">
-    @switch (count) { @case (undefined) {No task} @case (1) { {{ count }} task }
-    @default { {{ count }} tasks } }
+    @switch (this.taskCount) { @case (undefined) {No task} @case (1) {
+    {{ this.taskCount }} task } @default { {{ this.taskCount }} tasks } }
   </div>
   <div class="text-cl text-gray-100">{{ project.name }}</div>
 </div>
