--- a/src/app/task/task-list-page/task-list-page.component.html
+++ b/src/app/task/task-list-page/task-list-page.component.html
@@ -1,7 +1,7 @@
 <div
   class="flex flex-col items-center min-h-screen bg-gradient-to-r from-slate-900 to-slate-700"
 >
-  <div class="container m-4">
+  <div class="container m-4 p-4">
     <div class="max-w-3xl w-full mx-auto grid gap-4 grid-cols-1">
       <div class="flex flex-col sticky top-0 z-10">
         <div
