--- a/src/app/project/project-page/project-page.component.html
+++ b/src/app/project/project-page/project-page.component.html
@@ -1,6 +1,7 @@
 <h3 class="text-xl text-gray-100 mb-5">Projects</h3>
 
 <div class="grid grid-cols-12 gap-4">
+  {{ project$ | json }}
   @for (item of this.project; track item.id) {
 
   <app-project-card
