refactor:refactor code

--- a/src/app/ui/modal/modal.component.html
+++ b/src/app/ui/modal/modal.component.html
@@ -99,7 +99,7 @@
                 <ng-icon
                   size="30"
                   data-modal-target="crud-modal"
-                  class="block text-gray-600 hover:cursor-pointer overflow-visible"
+                  class="block text-gray-600 hover:cursor-pointer overflow-visible new-project-button"
                   name="featherPlusCircle"
                   (click)="addNewProject()"
                 >
@@ -107,7 +107,7 @@
               </div>
             </div>
 
-            <ul class="grid grid-cols-12 gap-2">
+            <ul class="flex flex-wrap mt-3 gap-2">
               @for (item of this.project; track item.id) {
               <li class="col-span-12 sm:col-span-4">
                 <input
@@ -152,7 +152,7 @@
           type="bu"
           class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >
-          {{ modalService.editMode ? "Edit" : " ADD" }}
+          {{ modalService.editMode ? 'Edit' : ' ADD' }}
         </button>
       </form>
     </div>
